[package]
name = "sfmt-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", optional = true }
rand_core = "0.6.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true